kubernetes/file-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: file-service
  namespace: taskhub

spec:
  replicas: 2

  selector:
    matchLabels:
      app: file-service

  template:
    metadata:
      labels:
        app: file-service

    spec:
      containers:
        - name: file-service
          image: taskhubacrdev260826.azurecr.io/taskhub-file-service:2.0
          imagePullPolicy: Always

          ports:
            - containerPort: 3002

          readinessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 30
            periodSeconds: 20
