kubernetes/file-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: file-service
  namespace: taskhub

spec:
  selector:
    app: file-service

  ports:
    - port: 3002
      targetPort: 3002

  type: ClusterIP
