kubernetes/task-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: task-service
  namespace: taskhub

spec:
  selector:
    app: task-service

  ports:
    - port: 3001
      targetPort: 3001

  type: ClusterIP
