kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: taskhub-ingress
  namespace: taskhub

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          - path: /tasks
            pathType: Prefix
            backend:
              service:
                name: task-service
                port:
                  number: 3001

          - path: /files
            pathType: Prefix
            backend:
              service:
                name: file-service
                port:
                  number: 3002
